<resources>
    <string name="app_name" translatable="false">AndroidLabs</string>
    <string name="hello_world">Hello World</string>
    <string name="button_text">I\m a button!</string>
    <string name="love_android">Android Love</string>
    <string name="switch_text">Switch On/Off</string>
    <string name="toast_message">Label has been updated</string>
    <string name="undo">Undo</string>
    <string name="edittext_hint">Type your name here</string>
    <string name="checkbox_status_on">Checkbox On</string>
    <string name="checkbox_status_off">Checkbox Off</string>
    <string name="press_me">Press me</string>
    <string name="check_this">Check this Out!</string>
    <string name="ImageDescription">American Flag</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="thank_you">THANK YOU!</string>
    <string name="don_call_me_that">DON\t CALL ME THAT</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="hint_type_here">Type Here</string>
    <string name="urgent">Urgent</string>
    <string name="add">Add</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="selected_row">Selected row: %1$d</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="height_format">Height: %s cm</string>
    <string name="mass_format">Mass: %s kg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


