<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <!--row 1 -->
    <TextView
        android:id="@+id/text_view_love_android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/love_android"
        android:textSize="30sp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal" />

    <ImageButton
        android:id="@+id/image_button_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="@string/ImageDescription"
        android:layout_column="1"
        android:layout_row="0" />

    <!-- row 2-->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        android:layout_column="0"
        android:layout_row="1" />

    <!-- Row 3 -->

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/check_this" />

    <Button
        android:id="@+id/button_press"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/press_me" />


    <!-- row 4-->
    <EditText
        android:id="@+id/edittext_love_android"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:autofillHints="none"
        android:background="#FFFFFF"
        android:hint="@string/edittext_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColorHint="#000000" />

</GridLayout>