<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--row1-->
    <TextView
        android:id="@+id/text_view_love_android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/love_android"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_button_flag"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_button_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:contentDescription="@string/ImageDescription"
        app:layout_constraintStart_toEndOf="@id/text_view_love_android"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--row 2-->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_love_android" />

    <!--row 3-->
    <Button
        android:id="@+id/button_press"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/press_me"
        app:layout_constraintEnd_toStartOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_compat" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_this"
        app:layout_constraintStart_toEndOf="@id/button_press"
        app:layout_constraintTop_toBottomOf="@id/image_button_flag"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--row4-->
    <EditText
        android:id="@+id/edittext_love_android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="#FFFFFF"
        android:hint="@string/edittext_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_press" />


</androidx.constraintlayout.widget.ConstraintLayout>